cmake_minimum_required(VERSION 3.9)
project(Client)
find_package(OpenSSL REQUIRED)
set(CMAKE_CXX_STANDARD 11)
add_executable(Client main.cpp NetworkServices.cpp NetworkServices.h ClientNetwork.cpp ClientNetwork.h NetworkData.h ClientAction.cpp ClientAction.h DecEnc.cpp DecEnc.h)
target_link_libraries(Client ws2_32 crypt32)
target_link_libraries(Client OpenSSL::SSL)
